--- a/.github/workflows/1project.yml
+++ b/.github/workflows/1project.yml
@@ -24,10 +24,10 @@ jobs:
 
     # Runs a single command using the runners shell
     - name: Run a one-line script
-      run: echo Hello, bravebrowser!
+      run: echo Hello bravebrowser
 
     # Runs a set of commands using the runners shell
     - name: Run a multi-line script
-      run: echo Hello, github teacher!
-        echo everybody i am new user
-        echo test, and deploy your project.
+      run: echo github teacher and
+        echo everybody i am new user here
+        echo my first project
